@@ -44,8 +44,8 @@
 /* Define the version number so folks can check against it */
 #define TC_VERSION_MAJOR  2
 #define TC_VERSION_MINOR  6
-#define TC_VERSION_PATCH  ".2"
-#define TC_VERSION_STRING "gperftools 2.6.2"
+#define TC_VERSION_PATCH  ".3"
+#define TC_VERSION_STRING "gperftools 2.6.3"
 
 #ifndef PERFTOOLS_NOTHROW
 
